--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
       <div id="prestations">
         <div class="imagesPrestations">
           <h4>Battez-vous pour survivre</h4>
-          <a href="#"><img src="media/pvp.JPG" alt="pvp"></a>
+          <a href="#"><img src="media/pvp.jpg" alt="pvp"></a>
         </div>
         <div class="imagesPrestations">
           <h4>Économie portée par les joueurs</h4>
-          <a href="#"><img src="media/économie.PNG" alt="économie"></a>
+          <a href="#"><img src="media/économie.png" alt="économie"></a>
         </div>
         <div class="imagesPrestations">
           <h4>Immobilier</h4>
-          <a href="#"><img src="media/Immobilier.jpg" alt="Immobilier"></a>
+          <a href="#"><img src="media/Immobilier.jpg" alt="immobilier"></a>
         </div>
       </div>
 
